# reid_mvp

./: .gitignore  Cargo.toml  README.md  anomaly_detection.ipynb  cross_video_reid.ipynb  experiment.ipynb  main.py  pyproject.toml  schema.sql  service.py  test.ipynb  test.py
api/: anomaly_detection.py  db.py  intervideo_reid.py  intravideo_reid.py  models.py  obj_detection.py  scene_generation.py
api/pipeline/: frame_sampler.py  object_detection.py  pipeline.py
ml/: anomaly_detection_pipeline.py  clustering_pipeline.py  create_db.py  intervideo_reid_pipeline.py  intravideo_reid_pipeline.py  obj_detection_pipeline.py  reid_pipeline.py  scene_generation.py
python/reid_mvp/: __init__.py
python/tests/: test_all.py
scripts/: download_data.sh
src/: lib.rs
