[project]
name = "reid-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clip",
    "duckdb>=1.3.0",
    "gdown>=5.2.0",
    "lap>=0.5.12",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "plotly>=6.1.2",
    "pydantic>=2.11.5",
    "ruptures>=1.1.9",
    "scikit-learn>=1.6.1",
    "scikit-optimize>=0.10.2",
    "tensorboard>=2.19.0",
    "torchreid>=0.2.5",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.145",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
